src/objects/CodeCoverage__c.object
<CustomObject>
    <fields>
        <fullName>NumLinesCovered__c</fullName>
        <label>NumLinesCovered</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>NumLinesUncovered__c</fullName>
        <label>NumLinesUncovered</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Percent__c</fullName>
        <label>Percent</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TestClassName__c</fullName>
        <label>TestClassName</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Total__c</fullName>
        <label>TotalLines</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>CodeCoverage</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>CodeCoverages</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>